=== HEAD

* Support transaction isolation levels on PostgreSQL, MySQL, and MSSQL (jeremyevans)

* Support prepared transactions/two-phase commit on PostgreSQL, MySQL, and H2 (jeremyevans)

* Allow NULLS FIRST/LAST when ordering using the :nulls=>:first/:last option to asc and desc (jeremyevans)

* On PostgreSQL, if no :schema option is provided for #tables, #table_exists?, or #schema, assume all schemas except the default non-public ones (jeremyevans) (#305)

* Cache prepared statements when using the native sqlite driver, improving performance (jeremyevans)

* Add a Tree plugin for treating model objects as being part of a tree (jeremyevans, mwlang)

* Add a :methods_module association option, for choosing the module into which association methods are placed (jeremyevans)

* Add a List plugin for treating model objects as being part of a list (jeremyevans, aemadrid)

* Don't attempt to use class polymorphism in the class_table_inheritance plugin if no cti_key is defined (jeremyevans)

* Add a XmlSerializer plugin for serializing/deserializing model objects to/from XML (jeremyevans)

* Add a JsonSerializer plugin for serializing/deserializing model objects to/from JSON (jeremyevans)

* Handle unsigned integers in the schema dumper (jeremyevans)

=== 3.12.1 (2010-06-09)

* Make :encoding option work on MySQL even if config file specifies different encoding (jeremyevans) (#300)

=== 3.12.0 (2010-06-01)

* Add a :deferrable option to foreign_key for creating deferrable foreign keys (hydrow)

* Add a :join_table_block many_to_many association option used by the add/remove/remove_all methods (jeremyevans)

* Add an AssociationPks plugin that adds association_pks and association_pks= methods for *_to_many associations (jeremyevans)

* Add an UpdatePrimaryKey plugin that allows you to update the primary key of a model object (jeremyevans)

* Add a SkipCreateRefresh plugin that skips the refresh when saving new model objects (jeremyevans)
